syntax = "proto3";

package DataPlane;

// The response message containing the message if error occured
message Result {
    string error_message = 1;
}
